[package]
name = "superdev-assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
base64 = "0.21"
bs58 = "0.5"
solana-sdk = "2.3.0"
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"
ed25519-dalek = "2.1.1"